add loading=lazy attribute

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
                 <div class="zheader__panel_wrapper">
                     <ul class="zheader__panel_inner">
                         <li>
-                            <img src="assets/icons/location.svg" alt="icon">
+                            <img src="assets/icons/location.svg" alt="icon" loading="lazy">
                             <span>ул. Текучева, 207 Ж, ком. 34-35А</span>
                         </li>
                         <li>
-                            <img src="assets/icons/clock.svg" alt="icon">
+                            <img src="assets/icons/clock.svg" alt="icon" loading="lazy">
                             <span>По будням, с 9:00 до 17:00</span>
                         </li>
                         <li>
                             <a href="tel:+78633075486">
-                                <img src="assets/icons/phone.svg" alt="icon">
+                                <img src="assets/icons/phone.svg" alt="icon" loading="lazy">
                                 <span>+7 (863) 307-54-86</span>
                             </a>
                         </li>
                         <li>
                             <a href="mailto:">
-                                <img src="assets/icons/email.svg" alt="icon">
+                                <img src="assets/icons/email.svg" alt="icon" loading="lazy">
                                 <span>info@rost-ts.ru</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="assets/icons/callback.svg" alt="icon">
+                                <img src="assets/icons/callback.svg" alt="icon" loading="lazy">
                                 <span>Заказать обратный звонок</span>
                             </a>
                         </li>
@@ -49,7 +49,7 @@
             <div class="zcontainer">
                 <div class="zheader__main_inner">
                     <a href="#" class="zheader__logo">
-                        <img src="assets/img/header_logo.png" alt="logo">
+                        <img src="assets/img/header_logo.png" alt="logo" loading="lazy">
                     </a>
                     <nav class="zheader__nav">
                         <ul class="zheader__nav_list">
@@ -64,7 +64,7 @@
                         </ul>
                     </nav>
                     <form class="zheader__search" action="#">
-                        <button type="submit"><img src="assets/icons/search.svg" alt="icon"></button>
+                        <button type="submit"><img src="assets/icons/search.svg" alt="icon" loading="lazy"></button>
                         <input type="text" placeholder="Поиск">
                     </form>
                     <button class="zheader__burgerBtn"></button>
@@ -78,7 +78,8 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="zmainbanner__item">
-                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner">
+                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner"
+                                loading="lazy">
                             <div class="zmainbanner__item_content">
                                 <div class="zmainbanner__item_text">
                                     <h3>Широкий спектр качественной техники</h3>
@@ -92,7 +93,8 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="zmainbanner__item">
-                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner">
+                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner"
+                                loading="lazy">
                             <div class="zmainbanner__item_content">
                                 <div class="zmainbanner__item_text">
                                     <h3>Широкий спектр качественной техники</h3>
@@ -106,7 +108,8 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="zmainbanner__item">
-                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner">
+                            <img class="zmainbanner__item_img" src="assets/img/main/banner1.jpg" alt="banner"
+                                loading="lazy">
                             <div class="zmainbanner__item_content">
                                 <div class="zmainbanner__item_text">
                                     <h3>Широкий спектр качественной техники</h3>
@@ -122,10 +125,10 @@
             </div>
             <div class="zmainbanner__buttons">
                 <div class="swiper-banner-prev">
-                    <img src="assets/icons/btn-prev.svg" alt="btn">
+                    <img src="assets/icons/btn-prev.svg" alt="btn" loading="lazy">
                 </div>
                 <div class="swiper-banner-next">
-                    <img src="assets/icons/btn-next.svg" alt="btn">
+                    <img src="assets/icons/btn-next.svg" alt="btn" loading="lazy">
                 </div>
             </div>
             <div class="swiper-pagination-banner"></div>
@@ -137,19 +140,19 @@
                     <ul class="zadvant__list">
                         <li class="zadvant__item">
                             <div class="zadvant__item_img">
-                                <img src="assets/img/advant/advant1.png" alt="advant">
+                                <img src="assets/img/advant/advant1.png" alt="advant" loading="lazy">
                             </div>
                             <p>Сертифицированная техника и оборудование</p>
                         </li>
                         <li class="zadvant__item">
-                            <div class="zadvant__item_img">
-                                <img src="assets/img/advant/advant2.png" alt="advant">
+                            <div class="zadvant__item_img" loading="lazy">
+                                <img src="assets/img/advant/advant2.png" alt="advant" loading="lazy">
                             </div>
                             <p>Бесперебойные поставки запчастей и комплектующих</p>
                         </li>
                         <li class="zadvant__item">
                             <div class="zadvant__item_img">
-                                <img src="assets/img/advant/advant3.png" alt="advant">
+                                <img src="assets/img/advant/advant3.png" alt="advant" loading="lazy">
                             </div>
                             <p>Выездные сервисные бригады для ремонта и обслуживания</p>
                         </li>
@@ -163,25 +166,25 @@
                     <h2 class="zgeneral__title black">Наши партнёры</h2>
                     <ul class="zpartners__list">
                         <li>
-                            <img src="assets/img/partners/partner1.svg" alt="partner">
+                            <img src="assets/img/partners/partner1.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner2.svg" alt="partner">
+                            <img src="assets/img/partners/partner2.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner3.svg" alt="partner">
+                            <img src="assets/img/partners/partner3.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner4.svg" alt="partner">
+                            <img src="assets/img/partners/partner4.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner5.svg" alt="partner">
+                            <img src="assets/img/partners/partner5.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner6.svg" alt="partner">
+                            <img src="assets/img/partners/partner6.svg" alt="partner" loading="lazy">
                         </li>
                         <li>
-                            <img src="assets/img/partners/partner7.svg" alt="partner">
+                            <img src="assets/img/partners/partner7.svg" alt="partner" loading="lazy">
                         </li>
                     </ul>
                 </div>
@@ -194,13 +197,13 @@
                         <h2 class="zgeneral__title">Каталог</h2>
                         <a class="zcatalog__panel_all" href="#">
                             <span>Все категории</span>
-                            <img src="assets/icons/arrow-right.svg" alt="icon">
+                            <img src="assets/icons/arrow-right.svg" alt="icon" loading="lazy">
                         </a>
                     </div>
                     <div class="zcatalog__list">
                         <a href="#" class="zcatalog__item">
                             <div class="zcatalog__item_img">
-                                <img src="assets/img/catalog/catalog1.png" alt="catalog">
+                                <img src="assets/img/catalog/catalog1.png" alt="catalog" loading="lazy">
                             </div>
                             <div class="zcatalog__item_content">
                                 <p>Погрузчики <span>(12)</span></p>
@@ -208,7 +211,7 @@
                         </a>
                         <a href="#" class="zcatalog__item">
                             <div class="zcatalog__item_img">
-                                <img src="assets/img/catalog/catalog2.png" alt="catalog">
+                                <img src="assets/img/catalog/catalog2.png" alt="catalog" loading="lazy">
                             </div>
                             <div class="zcatalog__item_content">
                                 <p>Мини-экскаваторы <span>(9)</span></p>
@@ -216,7 +219,7 @@
                         </a>
                         <a href="#" class="zcatalog__item">
                             <div class="zcatalog__item_img">
-                                <img src="assets/img/catalog/catalog3.png" alt="catalog">
+                                <img src="assets/img/catalog/catalog3.png" alt="catalog" loading="lazy">
                             </div>
                             <div class="zcatalog__item_content">
                                 <p>Кормораздатчики <span>(6)</span></p>
@@ -224,7 +227,7 @@
                         </a>
                         <a href="#" class="zcatalog__item">
                             <div class="zcatalog__item_img">
-                                <img src="assets/img/catalog/catalog4.png" alt="catalog">
+                                <img src="assets/img/catalog/catalog4.png" alt="catalog" loading="lazy">
                             </div>
                             <div class="zcatalog__item_content">
                                 <p>Тракторы <span>(11)</span></p>
@@ -241,14 +244,14 @@
                         <h2 class="zgeneral__title black">Новости</h2>
                         <a class="znews__panel_all" href="#">
                             <span>Все новости</span>
-                            <img src="assets/icons/arrow-right-black.svg" alt="icon">
+                            <img src="assets/icons/arrow-right-black.svg" alt="icon" loading="lazy">
                         </a>
                     </div>
                     <ul class="znews__list">
                         <li>
                             <a href="#" class="znews__item">
                                 <div class="znews__item_img">
-                                    <img src="assets/img/news/news1.jpg" alt="news">
+                                    <img src="assets/img/news/news1.jpg" alt="news" loading="lazy">
                                 </div>
                                 <div class="znews__item_content">
                                     <h5>Рынок спецтехники растет! Или нет?</h5>
@@ -262,7 +265,7 @@
                         <li>
                             <a href="#" class="znews__item">
                                 <div class="znews__item_img">
-                                    <img src="assets/img/news/news2.jpg" alt="news">
+                                    <img src="assets/img/news/news2.jpg" alt="news"> loading="lazy"
                                 </div>
                                 <div class="znews__item_content">
                                     <h5>Монтаж высевающего бункера APV PS500M2D для компании Аграрум</h5>
@@ -276,7 +279,7 @@
                         <li>
                             <a href="#" class="znews__item">
                                 <div class="znews__item_img">
-                                    <img src="assets/img/news/news3.jpg" alt="news">
+                                    <img src="assets/img/news/news3.jpg" alt="news" loading="lazy">
                                 </div>
                                 <div class="znews__item_content">
                                     <h5>Мини-экскаватор WACKER NEUSON ЕТ18 будет трудиться на берегах Волги!</h5>
@@ -290,7 +293,7 @@
                         <li>
                             <a href="#" class="znews__item">
                                 <div class="znews__item_img">
-                                    <img src="assets/img/news/news3.jpg" alt="news">
+                                    <img src="assets/img/news/news3.jpg" alt="news" loading="lazy">
                                 </div>
                                 <div class="znews__item_content">
                                     <h5>Мини-экскаватор WACKER NEUSON ЕТ18 будет трудиться на берегах Волги!</h5>
@@ -328,7 +331,7 @@
                 <div class="zfooter__main_inner">
                     <div class="zfooter__main_left">
                         <a href="#" class="zfooter__main_logo"><img src="assets/img/footer_logo.svg" alt="logo"
-                                loading="lazy">
+                                loading="lazy" loading="lazy">
                         </a>
                         <ul class="zfooter__main_bot">
                             <li>
@@ -339,29 +342,29 @@
                             <li>
                                 <a href="#">
                                     <span>Продвижение сайта — </span>
-                                    <img src="assets/img/rbru-logo.png" alt="logo">
+                                    <img src="assets/img/rbru-logo.png" alt="logo" loading="lazy">
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <ul class="zfooter__main_list">
                         <li>
-                            <img src="assets/icons/location-wihte.svg" alt="icon">
+                            <img src="assets/icons/location-wihte.svg" alt="icon" loading="lazy">
                             <span>ул. Текучева, 207 Ж, ком. 34-35А</span>
                         </li>
                         <li>
-                            <img src="assets/icons/clock-white.svg" alt="icon">
+                            <img src="assets/icons/clock-white.svg" alt="icon" loading="lazy">
                             <span>По будням, с 9:00 до 17:00</span>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="assets/icons/phone-white.svg" alt="icon">
+                                <img src="assets/icons/phone-white.svg" alt="icon" loading="lazy">
                                 <span>+7 (863) 307-54-86 </span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="assets/icons/email-white.svg" alt="icon">
+                                <img src="assets/icons/email-white.svg" alt="icon" loading="lazy">
                                 <span>info@rost-ts.ru</span>
                             </a>
                         </li>
