--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <li>
                             <a href="#" class="znews__item">
                                 <div class="znews__item_img">
-                                    <img src="assets/img/news/news2.jpg" alt="news"> loading="lazy"
+                                    <img src="assets/img/news/news2.jpg" alt="news" loading="lazy">
                                 </div>
                                 <div class="znews__item_content">
                                     <h5>Монтаж высевающего бункера APV PS500M2D для компании Аграрум</h5>
