--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 </div>
             </div>
             <div class="swiper-pagination-banner"></div>
+            <div class="swiper-progress"></div>
         </section>
         <section class="zadvant">
             <div class="zcontainer">
