--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="zcontainer">
                 <div class="zheader__main_inner">
                     <a href="#" class="zheader__logo">
-                        <img src="assets/img/header_logo.png" alt="logo" loading="lazy">
+                        <img src="assets/img/header_logo.svg" alt="logo" loading="lazy">
                     </a>
                     <nav class="zheader__nav">
                         <ul class="zheader__nav_list">
@@ -164,30 +164,49 @@
         <section class="zpartners">
             <div class="zcontainer">
                 <div class="zpartners__inner">
-                    <h2 class="zgeneral__title black">Наши партнёры</h2>
-                    <ul class="zpartners__list">
-                        <li>
-                            <img src="assets/img/partners/partner1.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner2.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner3.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner4.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner5.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner6.svg" alt="partner" loading="lazy">
-                        </li>
-                        <li>
-                            <img src="assets/img/partners/partner7.svg" alt="partner" loading="lazy">
-                        </li>
-                    </ul>
+                    <div class="zpartners__left">
+                        <h2 class="zgeneral__title black">Наши партнёры</h2>
+                        <div class="zpartners__buttons">
+                            <div class="swiper-partners-prev">
+                                <img src="assets/icons/btn-prev.svg" alt="btn" loading="lazy">
+                            </div>
+                            <div class="swiper-partners-next">
+                                <img src="assets/icons/btn-next.svg" alt="btn" loading="lazy">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiperPartners">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner1.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner2.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner3.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner4.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner5.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner6.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="zpartners__img" src="assets/img/partners/partner7.svg" alt="partner"
+                                    loading="lazy">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
