--- a/index.html
+++ b/index.html
@@ -164,47 +164,45 @@
         <section class="zpartners">
             <div class="zcontainer">
                 <div class="zpartners__inner">
-                    <div class="zpartners__left">
-                        <h2 class="zgeneral__title black">Наши партнёры</h2>
-                        <div class="zpartners__buttons">
-                            <div class="swiper-partners-prev">
-                                <img src="assets/icons/btn-prev.svg" alt="btn" loading="lazy">
-                            </div>
-                            <div class="swiper-partners-next">
-                                <img src="assets/icons/btn-next.svg" alt="btn" loading="lazy">
+                    <h2 class="zgeneral__title black">Наши партнёры</h2>
+                    <div class="zpartners__swiper">
+                        <div class="swiper-partners-prev">
+                            <img src="assets/icons/btn-prev.svg" alt="btn" loading="lazy">
+                        </div>
+                        <div class="swiperPartners">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner1.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner2.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner3.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner4.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner5.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner6.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="zpartners__img" src="assets/img/partners/partner7.svg" alt="partner"
+                                        loading="lazy">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="swiperPartners">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner1.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner2.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner3.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner4.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner5.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner6.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="zpartners__img" src="assets/img/partners/partner7.svg" alt="partner"
-                                    loading="lazy">
-                            </div>
+                        <div class="swiper-partners-next">
+                            <img src="assets/icons/btn-next.svg" alt="btn" loading="lazy">
                         </div>
                     </div>
                 </div>
